--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<div id="app"></div>
+<div id="app">
+
+  <div>
+    <label>escribe algo
+      <input type="text" id="texto"></input>
+    
+    </label>
+  
+  </div>
+
+
+</div>
