--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <div id="app">
-
+<header>
+    <h1> Encriptado karaca </h1>
+</header>
   <div>
-    <label>escribe algo
-      <input type="text" id="texto"></input>
-    
+    <label>
+      <input type="text" id="texto" placeholder="escribr algo"></input>
+      <button type="submit"> Enecriptar </button>
     </label>
   
   </div>
